remove breaks; cleanup

--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -10,6 +10,9 @@
                 font-family: 'Work Sans', sans-serif;
                 color: #444;
             }
+            header { padding-bottom: .5in; }
+            section { margin-bottom: .5in; }
+
             a {
                 text-decoration: none;
                 color: #0d78ef;
@@ -120,19 +123,19 @@
 
     </head>
     <body>
-        <header style="width: 100%">
+        <header>
             <div class="pull-left">
                 <img src="../../patric-logo.svg" class="logo pull-left">
                 <div class="title pull-left">Genome Report</div>
             </div>
 
             <div class="report-info pull-right">
-                Report Date: 2018&#x2F;03&#x2F;07<br>
+                Report Date: 2018&#x2F;03&#x2F;08<br>
                 Organism: Brucella neotomae 5K33
             </div>
         </header>
         <div class="clearfix"></div>
-        <br>
+
 
 
         <section>
@@ -156,7 +159,7 @@
                 Brucella neotomae was first isolated in 1957 from wood rats (Neotoma lepida) in North America and  has been considered nonzoonotic. Brucella neotomae 5K33 (ATCC 23459) is the type strain and will be used for comparative analysis with other Brucella species.
             </p>
         </section>
-        <br>
+
 
 
         <section>
@@ -194,7 +197,8 @@
                 </tbody>
             </table>
         </section>
-        <br>
+
+
 
         <section>
             <h2>Genome Annotation</h2>
@@ -208,7 +212,6 @@
             </p>
 
             <div style="width: 80%;" class="center-table"><i>Bacteria &gt;&gt; Proteobacteria &gt;&gt; Alphaproteobacteria &gt;&gt; Rhizobiales &gt;&gt; Brucellaceae &gt;&gt; Brucella &gt;&gt; Brucella neotomae &gt;&gt; Brucella neotomae 5K33</i></div><br>
-
 
             <p>
                 The annotations includes 3349 CDS, 50 tRNAs and 3 rRNAs.
@@ -238,8 +241,6 @@
                 </tbody>
             </table>
 
-            <div class="clearfix"></div>
-            <br>
 
             <table class="med-table kv-table-2 center-table">
                 <thead class="table-header">
@@ -260,9 +261,6 @@
                 </tbody>
             </table>
 
-            <div class="clearfix"></div>
-            <br>
-
             <p>
                 A graphical display of the distribution of the CDS on each strand, the repeat_regions,
                 GC content and GC skew are provided (Figure 1).
@@ -270,7 +268,6 @@
 
             <img src="../520456.3/520456.3-circular.svg" class="circular-fig" />
         </section>
-        <br>
 
 
         <section>
@@ -282,8 +279,6 @@
                 The reasons affecting the quality of genome are: [genome qc flags].
             </p>
         </section>
-        <br>
-
 
 
         <section>
@@ -356,7 +351,6 @@
                 </tbody>
             </table>
         </section>
-        <br>
 
 
 
@@ -376,7 +370,6 @@
             <img src="../520456.3/520456.3-subsystem.svg" class="subsystem-fig" />
 
         </section>
-        <br>
 
 
         <section>
@@ -403,12 +396,10 @@
                 The trimmed alignments are concatenated and this concatenated alignment is
                 used to build the main tree with either RAxML or FastTree.
             </p>
-            <br>
+
 
             <h3>Comparison to Reference Genomes in the Same Genus</h3>
             <img src="../520456.3/520456.3-tree.svg" class="tree-fig" />
-
-
         </section>
     </body>
 </html>
