--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -40,7 +40,10 @@
                 page-break-inside: avoid;
             }
 
-            table-num {
+            table-num,
+            table-ref,
+            fig-num,
+            fig-ref {
                 font-weight: 600;
             }
 
@@ -85,7 +88,7 @@
             .center-table { margin-left: auto; margin-right: auto; }
 
             .logo {
-                width: 200px;
+                width: 3in;
                 border-right: 3px solid #444;
                 padding-right: 10px;
                 margin-right: 10px;
