--- a/reports/520456.3/genome-report.html
+++ b/reports/520456.3/genome-report.html
@@ -159,6 +159,9 @@
 <li>Gastric fever/ram epididymitis</li>
 <li>Contagious abortion/spontaneous abortion</li>
 </ul><p></p>
+
+<p></p>
+
             <p></p>
 
             <p>
@@ -209,9 +212,9 @@
                     </tr>
                     <tr>
                         <td>Genome Length</td>
-                        <td class="align-right">3,329,623</td>
+                        <td class="align-right">3,329,623 Bps</td>
                         <td>Contig N50</td>
-                        <td class="align-right">1923503</td>
+                        <td class="align-right">1,923,503</td>
                     </tr>
                     <tr>
                         <td>Chromosomes</td>
@@ -269,7 +272,7 @@
                 <tbody>
                     <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                         <tr>
-                            <td>CDS</td><td class="align-right">3434</td>
+                            <td>CDS</td><td class="align-right">3,434</td>
                         </tr>
                         <tr>
                             <td>tRNA</td><td class="align-right">48</td>
@@ -297,10 +300,13 @@
                 <tbody>
                     <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     <tr>
-                        <td>Hypothetical proteins</td><td class="align-right">772</td>
+                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td><td class="align-right">3,434</td>
                     </tr>
                     <tr>
-                        <td>Proteins with functional assignments</td><td class="align-right">2662</td>
+                        <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td><td class="align-right">3,434</td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with functional assignments</td><td class="align-right">2,662</td>
                     </tr>
                     <tr>
                         <td>Proteins with EC number assignments</td><td class="align-right">947</td>
@@ -309,13 +315,10 @@
                         <td>Proteins with GO assignments</td><td class="align-right">934</td>
                     </tr>
                     <tr>
+                        <td>Hypothetical proteins</td><td class="align-right">772</td>
+                    </tr>
+                    <tr>
                         <td>Proteins with Pathway assignments</td><td class="align-right">746</td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td><td class="align-right">3434</td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td><td class="align-right">3434</td>
                     </tr>
                 </tbody>
             </table>
