--- a/reports/46170.310/genome-report.html
+++ b/reports/46170.310/genome-report.html
@@ -15,30 +15,12 @@
                 text-decoration: none;
                 color: #0d78ef;
             }
-            a:hover {
-                text-decoration: underline;
-            }
-            h2 {
-                font-size: 1.45em;
-
-            }
-            h2, h3 {
-                font-weight: 500;
-            }
-            .pull-left {
-                float: left;
-            }
-            .pull-right {
-                float: right;
-            }
-            h2 small {
-                color: #aaa;
-            }
-            table {
-                margin: .1in 0;
-                border-collapse: collapse;
-                page-break-inside: avoid;
-            }
+            a:hover { text-decoration: underline; }
+            h2 { font-size: 1.45em; }
+            h2, h3 { font-weight: 500; }
+            h2 small { color: #aaa; }
+            .pull-left { float: left; }
+            .pull-right { float: right; }
 
             table-num,
             table-ref,
@@ -47,39 +29,45 @@
                 font-weight: 600;
             }
 
-            /* standard key-value table (single or 2 columns)*/
+            /* tables */
+            table {
+                margin: .1in 0 .5in 0;
+                border-collapse: collapse;
+                page-break-inside: avoid;
+            }
+            .table-header {
+                color: #fff;
+                background: #196E9C;
+                padding: 5px;
+                text-align: left;
+            }
+            .table-header th { font-weight: 400; }
+            .row-header { border-bottom: 1px solid #196E9C; font-weight: 600; }
+            th, td { padding: 5px; }
+            th  { border-bottom: 2px solid #196E9C; }
+            tr:last-child { border-bottom: 1px solid #196E9C; }
+
             .kv-table,
             .kv-table-2 {
                 text-align: left;
+            }
+
+            .kv-table-2 td:nth-child(2) {
+                border-right: 1px solid rgb(172, 172, 172)
             }
 
             .kv-table td:first-child,
             .kv-table-2 td:first-child,
             .kv-table-2 td:nth-child(3) {
                 font-weight: 700;
-
-            }
-
-            .kb-table-2 td {
-                border-collapse: separate;
-                border-spacing: 0px 50px;
             }
 
             table td.align-right {
                 text-align: right;
             }
 
-            .table-header {
-                color: #fff;
-                background: #196E9C;
-                padding: 5px;
-            }
-            .table-header th { font-weight: 400; }
-            .row-header { border-bottom: 1px solid #196E9C; font-weight: 600;}
-            th, td { padding: 5px; }
-            th  { border-bottom: 2px solid #196E9C; }
-            tr:last-child { border-bottom: 1px solid #196E9C; }
-
+            .kv-table-2 td:nth-child(2) { padding-right: 10px; }
+            .kv-table-2 td:nth-child(3) { padding-left: 10px; }
             .lg-table { width: 80%; }
             .med-table { width: 60%; }
             .sm-table { width: 40%; }
@@ -89,20 +77,23 @@
 
             .logo {
                 width: 3in;
-                border-right: 3px solid #444;
+                border-right: 3px solid #777;
                 padding-right: 10px;
                 margin-right: 10px;
             }
             .title {
-                padding: 10px 0 0 0px;
-                font-size: 1.3em;
-                color: #444;
+                padding: 15px 0 0 0px;
+                font-size: 2.0em;
+                color: #777;
             }
             .report-info {
                 text-align: right;
                 margin-right: 30px;
                 font-size:.8em;
                 color: #777;
+            }
+            .report-info span {
+                font-weight: 600;
             }
 
             .main-img {
@@ -143,12 +134,12 @@
             </div>
 
             <div class="report-info pull-right">
-                Report Date: 2018/03/13<br>
-                Organism: Staphylococcus aureus subsp. aureus strain VB4283
+                <span>Report Date:</span> 2018/03/19<br>
+                <span>Organism:</span> Staphylococcus aureus subsp. aureus strain VB4283
             </div>
         </header>
-        <div class="clearfix"></div>
 
+        <div class="clearfix"></div>
 
 
         <section>
@@ -173,15 +164,21 @@
         <section>
             <h2>Genome Assembly</h2>
             <p>
-                Brucella neotomae BNWLG2-S2 ran under job ID 2fee1c1b-f8bb-4781-bb20-f08fa66398e1 at PATRIC (1).  The assembly job started at 10/6/17, 2:53 PM and completed at 10/7/17, 4:41 PM, after 25h 47m 90011s.  The auto assembly strategy was selected, and it runs BayesHammer [2] on short reads, followed by three assembly strategies that include Velvet [3], IDBA [4] and Spades [5], each of which is given an assembly score by ARAST, an in-house script. The minimum contig length was 120bp, and smaller contigs were not included in the assembly. The minimum contig coverage was 5, and contigs with less coverage were not included in the assembly.
+                Staphylococcus aureus subsp. aureus strain VB4283 ran under job ID 2fee1c1b-f8bb-4781-bb20-f08fa66398e1 at PATRIC[1].
+                The assembly job started at 10/6/17, 2:53 PM and completed at 10/7/17, 4:41 PM, after 25h 47m 90011s.
+                The auto assembly strategy was selected, and it runs BayesHammer [2] on short reads, followed by three
+                assembly strategies that include Velvet [3], IDBA [4] and Spades [5], each of which is given
+                an assembly score by ARAST, an in-house script. The minimum contig length was 120bp,
+                and smaller contigs were not included in the assembly. The minimum contig coverage was 5,
+                and contigs with less coverage were not included in the assembly.
                 Also add reference to QUAST. ARAST ranked the Spades assembly best (<table-ref>Table 1</table-ref>).
             </p>
             <p>
-                The assembled genome has 78 contigs, with the total length of 3.31 Mbp and %GC of 32.7%.
+                The assembled genome has 78 contigs,
+                with the total length of 2.8 Mbp and %GC of 32.7%.
             </p>
 
-            <table class="lg-table kv-table-2 center-table">
-
+            <table class="med-table kv-table-2 center-table">
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
@@ -199,19 +196,19 @@
                     </tr>
                     <tr>
                         <td>Plasmids</td>
-                        <td class="align-right"></td>
+                        <td class="align-right">-</td>
                         <td>Contig L50</td>
                         <td class="align-right">9</td>
                     </tr>
                     <tr>
                         <td>Genome Length</td>
-                        <td class="align-right">2796422</td>
+                        <td class="align-right">2,796,422 Bps</td>
                         <td>Contig N50</td>
-                        <td class="align-right">105363</td>
+                        <td class="align-right">105,363</td>
                     </tr>
                     <tr>
                         <td>Chromosomes</td>
-                        <td class="align-right"></td>
+                        <td class="align-right">-</td>
                         <td></td><td></td>
                     </tr>
                 </tbody>
@@ -224,11 +221,11 @@
             <h2>Genome Annotation</h2>
             <p>
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
-                provide annotation of genomic features. The job for B. neotomae BNWLG2-S2
+                provide annotation of genomic features. The job for Staphylococcus aureus subsp. aureus strain VB4283
                 ran under job number 685fb8c1-348a-4cea-a298-496b037af1f8.
                 The annotation job started at 10/9/17, 7:10 AM and completed at 10/9/17, 8:16 AM,
                 after 1h 5m 3623s.  The selected domain was Bacteria, the Taxonomy ID was 234.128.
-                The Genetic code was 11.  The taxonomy of B. neotomae BNWLG2-S2 is:
+                The Genetic code was 11.  The taxonomy of Staphylococcus aureus subsp. aureus strain VB4283 is:
             </p>
 
             <div style="width: 90%;" class="center-table">
@@ -236,13 +233,22 @@
             </div><br>
 
             <p>
-                The annotations includes 3349 CDS, 50 tRNAs and 3 rRNAs.
+                The annotations includes
+                    2903 CDS,
+                    56 tRNAs and
+                    6 rRNAs.
+
                 All annotated genome features for this genome are summarized in <table-ref>Table 2</table-ref>.
             </p>
 
             <p>
-                The functional annotation included 655 hypothetical proteins and 2694 proteins with functional assignments.
-                Furthermore, 963 proteins were  assigned EC numbers and 749 proteins were mapped to KEGG pathways.
+                The functional annotation included
+                    740 hypothetical proteins and
+                    2163 proteins with functional assignments.
+                Furthermore,
+                    947 proteins were  assigned EC numbers and
+                    561 proteins were mapped to KEGG pathways.
+
                 A breakdown of the proteins that have been annotated for this isolate is provided in <table-ref>Table 3</table-ref>.
             </p>
 
@@ -256,7 +262,7 @@
                 <tbody>
                     <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                         <tr>
-                            <td>CDS</td><td class="align-right">2903</td>
+                            <td>CDS</td><td class="align-right">2,903</td>
                         </tr>
                         <tr>
                             <td>repeat_region</td><td class="align-right">127</td>
@@ -290,25 +296,25 @@
                 <tbody>
                     <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     <tr>
-                        <td>Hypothetical proteins</td><td class="align-right">740</td>
+                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td><td class="align-right">2,845</td>
                     </tr>
                     <tr>
-                        <td>Proteins with functional assignments</td><td class="align-right">2163</td>
+                        <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td><td class="align-right">2,845</td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with functional assignments</td><td class="align-right">2,163</td>
                     </tr>
                     <tr>
                         <td>Proteins with EC number assignments</td><td class="align-right">947</td>
+                    </tr>
+                    <tr>
+                        <td>Hypothetical proteins</td><td class="align-right">740</td>
                     </tr>
                     <tr>
                         <td>Proteins with GO assignments</td><td class="align-right">640</td>
                     </tr>
                     <tr>
                         <td>Proteins with Pathway assignments</td><td class="align-right">561</td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td><td class="align-right">2845</td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td><td class="align-right">2845</td>
                     </tr>
                 </tbody>
             </table>
@@ -350,7 +356,11 @@
                 </thead>
 
                 <tbody>
-                    <tr class="row-header"><td></td> <td>Source</td> <td>Genes</td></tr>
+                    <tr class="row-header">
+                        <td></td>
+                        <td>Source</td>
+                        <td class="align-right">Genes</td>
+                    </tr>
                     <tr>
                         <td>Virulence Factor</td>
                         <td>VFDB</td>
@@ -397,6 +407,7 @@
 
 
 
+         <!-- only shown if data is available -->
         <section>
             <h2>Antimicrobial Resistance Analysis</h2>
             <table class="lg-table kv-table center-table">
@@ -471,9 +482,12 @@
 
 
             <h3>Comparison to Reference Genomes in the Same Genus</h3>
-
             <fig-num>Figure 3</fig-num>
             <img src="../46170.310/46170.310-tree.svg" class="tree-fig">
         </section>
+
+
+
+        
     
 </body></html>
